// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputSelect.svelte > should render items using custom component 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      name="opt"
      using="[object Object]"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        1
      </option>
      <option
        aria-current="false"
        value="1"
      >
        2
      </option>
      <option
        aria-current="false"
        value="2"
      >
        3
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;

exports[`InputSelect.svelte > should render items using custom mapping 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      name="opt"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        1
      </option>
      <option
        aria-current="false"
        value="1"
      >
        2
      </option>
      <option
        aria-current="false"
        value="2"
      >
        3
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;

exports[`InputSelect.svelte > should render items using default item when data is invalid 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      name="opt"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        1
      </option>
      <option
        aria-current="false"
        value="1"
      >
        2
      </option>
      <option
        aria-current="false"
        value="2"
      >
        3
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;

exports[`InputSelect.svelte > should render items using field mappings 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      name="opt"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        1
      </option>
      <option
        aria-current="false"
        value="1"
      >
        2
      </option>
      <option
        aria-current="false"
        value="2"
      >
        3
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;

exports[`InputSelect.svelte > should render using default field mapping 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      name="opt"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        a
      </option>
      <option
        aria-current="false"
        value="1"
      >
        b
      </option>
      <option
        aria-current="false"
        value="2"
      >
        c
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;

exports[`InputSelect.svelte > should render with alternate class 1`] = `
<div>
  <div
    class="myClass"
    data-input-select=""
  >
    <select
      name="opt"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        1
      </option>
      <option
        aria-current="false"
        value="1"
      >
        2
      </option>
      <option
        aria-current="false"
        value="2"
      >
        3
      </option>
      <!---->
    </select>
     
    <span
      data-input-select-icon=""
    >
      <i
        class="selector-closed"
      />
      <!---->
    </span>
  </div>
  
</div>
`;
